--- a/TransitionAnimation/Base.lproj/Main.storyboard
+++ b/TransitionAnimation/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ceo-Mp-kbt">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="16B2555" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ceo-Mp-kbt">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -102,7 +103,7 @@
                                             <frame key="frameInset" width="375" height="43"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XT8-sv-qRm">
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="navigation" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="XT8-sv-qRm">
                                                     <frame key="frameInset" minX="15" width="345" height="43"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -111,6 +112,9 @@
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <segue destination="9pU-Oc-ydX" kind="show" id="uSR-gX-akr"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" textLabel="AxI-Yn-lDe" style="IBUITableViewCellStyleDefault" id="DKh-hA-HoU">
                                         <rect key="frame" x="0.0" y="268" width="375" height="44"/>
@@ -285,6 +289,150 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Nji-vq-qKN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="2570" y="757"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="IW7-W1-2Kk">
+            <objects>
+                <navigationController id="9pU-Oc-ydX" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="qBy-ai-U2T">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="iRE-XB-35E" kind="relationship" relationship="rootViewController" id="OQv-p4-YUE"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="PsQ-qY-Hpi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-110" y="1719"/>
+        </scene>
+        <!--Title-->
+        <scene sceneID="hb5-Ww-yzv">
+            <objects>
+                <viewController id="iRE-XB-35E" customClass="CollectionViewController" customModule="TransitionAnimation" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="YRj-FC-wmH"/>
+                        <viewControllerLayoutGuide type="bottom" id="Nso-GH-cVv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="nTZ-qU-FcH">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="HpJ-pg-hss">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hvE-gT-11K">
+                                    <size key="itemSize" width="150" height="150"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="customCell" id="H3e-oB-Vfp" customClass="CustomCell" customModule="TransitionAnimation" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="500" translatesAutoresizingMaskIntoConstraints="NO" id="agd-eZ-6TT"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uzu-nS-muj">
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="agd-eZ-6TT" firstAttribute="leading" secondItem="H3e-oB-Vfp" secondAttribute="leading" id="3RH-6j-b6t"/>
+                                            <constraint firstItem="Uzu-nS-muj" firstAttribute="bottom" secondItem="H3e-oB-Vfp" secondAttribute="bottomMargin" id="JwV-Oi-KhF"/>
+                                            <constraint firstItem="Uzu-nS-muj" firstAttribute="top" secondItem="agd-eZ-6TT" secondAttribute="bottom" id="W4y-Gq-OfN"/>
+                                            <constraint firstItem="Uzu-nS-muj" firstAttribute="leading" secondItem="H3e-oB-Vfp" secondAttribute="leadingMargin" id="Zs9-ep-lTW"/>
+                                            <constraint firstItem="agd-eZ-6TT" firstAttribute="top" secondItem="H3e-oB-Vfp" secondAttribute="top" id="opm-Cy-iY5"/>
+                                            <constraint firstAttribute="trailing" secondItem="agd-eZ-6TT" secondAttribute="trailing" id="x2h-aQ-lbt"/>
+                                            <constraint firstAttribute="bottom" secondItem="agd-eZ-6TT" secondAttribute="bottom" constant="25" id="ydt-Ze-rxd"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="Uzu-nS-muj" secondAttribute="trailing" id="zsp-bM-bHY"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="imgView" destination="agd-eZ-6TT" id="gvY-WD-yep"/>
+                                            <outlet property="label" destination="Uzu-nS-muj" id="6eU-ah-gmR"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="iRE-XB-35E" id="fyP-Hf-B0H"/>
+                                    <outlet property="delegate" destination="iRE-XB-35E" id="JbF-5O-oiH"/>
+                                </connections>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="HpJ-pg-hss" firstAttribute="leading" secondItem="nTZ-qU-FcH" secondAttribute="leading" id="Ic8-Ib-era"/>
+                            <constraint firstItem="HpJ-pg-hss" firstAttribute="top" secondItem="YRj-FC-wmH" secondAttribute="bottom" id="Nfj-um-61c"/>
+                            <constraint firstAttribute="trailing" secondItem="HpJ-pg-hss" secondAttribute="trailing" id="tfH-X4-z2v"/>
+                            <constraint firstItem="Nso-GH-cVv" firstAttribute="top" secondItem="HpJ-pg-hss" secondAttribute="bottom" id="y9u-XG-rHJ"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title" id="Dvb-YV-WfD">
+                        <barButtonItem key="leftBarButtonItem" title="MENU" id="LSr-hW-Wrv">
+                            <connections>
+                                <segue destination="uOQ-yG-oad" kind="unwind" unwindAction="unwindMenuWithSegue:" id="ewT-6X-uns"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="collectionView" destination="HpJ-pg-hss" id="8Eg-WF-pg2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HVJ-n4-Uw7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="uOQ-yG-oad" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="741.60000000000002" y="1718.5907046476764"/>
+        </scene>
+        <!--Second View Controller-->
+        <scene sceneID="cmG-sC-KSP">
+            <objects>
+                <viewController storyboardIdentifier="SecondViewController" id="tjC-FS-lnu" customClass="SecondViewController" customModule="TransitionAnimation" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mhs-zj-rAy"/>
+                        <viewControllerLayoutGuide type="bottom" id="Rw3-De-XWv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="d1s-ZQ-ttR">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="500" translatesAutoresizingMaskIntoConstraints="NO" id="VHX-HK-9xO">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="V3G-Tm-UrM"/>
+                                    <constraint firstAttribute="width" constant="240" id="mmv-Al-C4O"/>
+                                </constraints>
+                            </imageView>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="fuP-qF-Xas">
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="HwV-HU-3EC"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="VHX-HK-9xO" firstAttribute="top" secondItem="mhs-zj-rAy" secondAttribute="bottom" constant="100" id="Rb8-Ey-jbE"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="fuP-qF-Xas" secondAttribute="trailing" constant="52" id="V22-LF-exN"/>
+                            <constraint firstItem="fuP-qF-Xas" firstAttribute="top" secondItem="VHX-HK-9xO" secondAttribute="bottom" constant="20" id="cil-Tg-EVJ"/>
+                            <constraint firstItem="VHX-HK-9xO" firstAttribute="centerX" secondItem="d1s-ZQ-ttR" secondAttribute="centerX" id="fNa-Dj-zkC"/>
+                            <constraint firstItem="fuP-qF-Xas" firstAttribute="leading" secondItem="d1s-ZQ-ttR" secondAttribute="leadingMargin" constant="51" id="g3a-Zl-POT"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="imgView" destination="VHX-HK-9xO" id="tlf-Yf-YDZ"/>
+                        <outlet property="textView" destination="fuP-qF-Xas" id="tGP-R5-Irt"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ZzP-ng-BqJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="742" y="2401"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="AUs-b1-za2">
@@ -530,4 +678,7 @@
             <point key="canvasLocation" x="1857" y="2136"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="500" width="500" height="500"/>
+    </resources>
 </document>
